adjusted grid sizing to prevent overflow

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,27 @@ height: 3.3vmin;
 
 #message{
   color:orangered;
-  margin: 0.25vmin;
+  margin: 1vmin;
+}
+
+.cell{
+  height: 7.5vmin;
+}
+
+.small{
+font-size: 2.25
+}
+.title{
+  height: 4vmin;
+}
+.pivot{
+  color: darkblue;
+}
+.support ,.resistance{
+  color: rgb(50,50,50)
+}
+.name{
+  text-align: left;
 }
 
 .container{
@@ -24,18 +44,20 @@ height: 3.3vmin;
   justify-content: center;
   align-items: center;
     border: 1px solid black;
-    width: 96vmin; 
-    height: 96vmin;
+    width: 98vmin; 
+    height: 98vmin;
     margin: auto;
     text-align: center;
     font-family: 'Raleway';
     background-color: white;
-    font-size: 2.75vmin;
+    font-size: 2.6vmin;
     top:0;
     right:0;
     left:0;
     bottom:0;
     position: absolute;
+    text-overflow: ellipsis;
+
 }
 
 .content{
